@@ -26,7 +26,7 @@ elseif strmatch(projectVersion, "%-%d+%-") then
 end
 
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. " " .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 72005 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
+TELLMEWHEN_VERSIONNUMBER = 72006 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
 
 TELLMEWHEN_FORCECHANGELOG = 71030 -- if the user hasn't seen the changelog until at least this version, show it to them.
 
@@ -353,7 +353,7 @@ TMW.BE = {
 		IncreasedStats		= "1126;20217;90363;115921;116781;159988;160017;160077;72586",
 		IncreasedVersatility= "55610;1126;167187;167188;159735;35290;160045;50518;57386;160077",
 		IncreasedMultistrike= "166916;49868;113742;109773;58604;34889;57386;24844;",
-		BonusStamina		= "21562;116928;469;90364;160003;160014;111922",
+		BonusStamina		= "21562;166928;469;90364;160003;160014;111922",
 		IncreasedCrit		= "24932;1459;61316;116781;97229;24604;90309;126373;126309;160052",
 		BurstHaste			= "2825;32182;80353;90355;146555;160452",
 		
